--- a/example/nested/HelloWorld.html
+++ b/example/nested/HelloWorld.html
@@ -4,7 +4,12 @@
     <title>Hello, World</title>
   </head>
   <body>
-    <div>Hello, World</div>
+    <div>
+      Hello, World
+    </div>
     <script src='SpecHelper.js' type='text/javascript'></script>
   </body>
 </html>
+<!-- Local Variables: -->
+<!-- mode:auto-revert -->
+<!-- End: -->
