--- a/example/hello_world.html
+++ b/example/hello_world.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang='en-US' xml:lang='en-US' xmlns='http://www.w3.org/1999/xhtml'>
   <head>
-    <title>Hello, World</title>
+    <title>hello, world</title>
   </head>
   <body>
-    <div>Hello, World</div>
+    <div>
+      hello, world
+    </div>
     <script src='spec_helper.js' type='text/javascript'></script>
   </body>
 </html>
+<!-- Local Variables: -->
+<!-- mode:auto-revert -->
+<!-- End: -->
